# projectElec2024

./: .gitignore  Flash_simple_code.ino  README.md  ardoSyst.ino  duck.ai_2025-01-28_15-38-02.md
ArdoGeneral/Drafts/ardoSyst/: ardoSyst.ino
ArdoGeneral/ardUART/: ardUART.ino
ArdoGeneral/compunents code/: Flash_simple_code.ino
ArdoGeneral/compunents code/neopixels_simple_code/: neopixels_simple_code.ino
ArdoGeneral/neopixels_simple_code/: neopixels_simple_code.ino
DoorControlCenter/: main.vala  meson.build
DoorControlCenter/data/: org.Meteoromer.DoorControlCenter.gresource.xml
DoorControlCenter/data/layout/: mainWindow.ui
DoorControlCenter/src/: main.vala  meson.build  org.Meteoromer.DoorControlCenter.gresource.xml  tts
DoorControlCenter/src/ui/: mainWindow.ui
ESPCAMGeneral/: TRY.ino
ESPCAMGeneral/ESP32-cam-RTSP/: platformio.ini
ESPCAMGeneral/ESP32-cam-RTSP/include/: camera_pins.h
ESPCAMGeneral/ESP32-cam-RTSP/src/: main.cpp
ESPCAMGeneral/esp32-micro-rtsp/: platformio.ini
ESPCAMGeneral/esp32-micro-rtsp/src/: main.cpp  wifikeys.h
General/: README.md
TRY/: TRY.ino
code-examples/: README.md  rtspclient.md
